# keephive

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/config/: mod.rs  models.rs
src/core/: backup.rs  copy_engine.rs  mod.rs  validation.rs
src/observability/: logger.rs  mod.rs
src/platform/: mod.rs  traits.rs
src/platform/windows/: constants.rs  file_ops.rs  filesystem.rs  long_path.rs  mod.rs  service.rs  service_impl.rs
src/scheduler/: changes.rs  engine.rs  executor.rs  mod.rs
src/service/: daemon.rs  mod.rs  recovery.rs  signals.rs
src/state/: manager.rs  mod.rs  models.rs  watcher.rs
