[package]
name = "keephive"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_System_IO",
    "Win32_Security",
] }

[dev-dependencies]
tempfile = "3.23.0"

[dependencies]
tokio = { version = "1.48.0", features = ["full", "fs", "sync", "signal", "io-util"] }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

chrono = { version = "0.4.42", features = ["serde"] }

anyhow = "1.0.100"

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
tracing-appender = "0.2.3"

notify = "8.2.0"

windows-service = "0.8.0"

tokio-util = { version = "0.7.16", features = ["full"] }
dunce = "1.0.5"